tests/baselines/reference/overloadOnConstInheritance4.errors.txt
==== tests/cases/compiler/overloadOnConstInheritance4.ts (3 errors) ====
    interface I {
        x1(a: number, callback: (x: 'hi') => number);
                                ~~~~~~~~~~~~~~~~~~~
!!! overloadOnConstInheritance4.ts(2,29): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    }
    class C implements I {
        x1(a: number, callback: (x: 'hi') => number);
                                ~~~~~~~~~~~~~~~~~~~
!!! overloadOnConstInheritance4.ts(5,29): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        x1(a: number, callback: (x: 'hi') => number) {
                                ~~~~~~~~~~~~~~~~~~~
!!! overloadOnConstInheritance4.ts(6,29): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        }
    }
    